src/fit/sdk/fit_example.h


typedef FIT_UINT32 FIT_DATE_TIME; // seconds since UTC 00:00 Dec 31 1989

typedef FIT_UINT16 FIT_MESSAGE_INDEX;

typedef FIT_UINT8 FIT_DEVICE_INDEX;

typedef FIT_ENUM FIT_SPORT;

typedef FIT_ENUM FIT_SUB_SPORT;

typedef FIT_ENUM FIT_INTENSITY;

typedef FIT_ENUM FIT_LAP_TRIGGER;

typedef FIT_ENUM FIT_EVENT;

typedef FIT_ENUM FIT_EVENT_TYPE;

typedef FIT_UINT16 FIT_MANUFACTURER;

typedef FIT_UINT8 FIT_DEVICE_TYPE;

typedef FIT_UINT8 FIT_BATTERY_STATUS;

typedef FIT_ENUM FIT_SWIM_STROKE;

typedef FIT_UINT8 FIT_LEFT_RIGHT_BALANCE;

typedef FIT_UINT16 FIT_LEFT_RIGHT_BALANCE_100;

typedef struct
{
   FIT_DATE_TIME timestamp; // s,Lap end time.
   FIT_DATE_TIME start_time; // 
   FIT_SINT32 start_position_lat; // semicircles,
   FIT_SINT32 start_position_long; // semicircles,
   FIT_SINT32 end_position_lat; // semicircles,
   FIT_SINT32 end_position_long; // semicircles,
   FIT_UINT32 total_elapsed_time; // 1000 * s,Time (includes pauses)
   FIT_UINT32 total_timer_time; // 1000 * s,Timer Time (excludes pauses)
   FIT_UINT32 total_distance; // 100 * m,
   FIT_UINT32 total_cycles; // cycles,
   FIT_UINT32 total_work; // J,
   FIT_UINT32 total_moving_time; // 1000 * s,
   FIT_UINT32 time_in_hr_zone[FIT_LAP_MESG_TIME_IN_HR_ZONE_COUNT]; // 1000 * s,
   FIT_UINT32 time_in_speed_zone[FIT_LAP_MESG_TIME_IN_SPEED_ZONE_COUNT]; // 1000 * s,
   FIT_UINT32 time_in_cadence_zone[FIT_LAP_MESG_TIME_IN_CADENCE_ZONE_COUNT]; // 1000 * s,
   FIT_UINT32 time_in_power_zone[FIT_LAP_MESG_TIME_IN_POWER_ZONE_COUNT]; // 1000 * s,
   FIT_MESSAGE_INDEX message_index; // 
   FIT_UINT16 total_calories; // kcal,
   FIT_UINT16 total_fat_calories; // kcal,If New Leaf
   FIT_UINT16 avg_speed; // 1000 * m/s,
   FIT_UINT16 max_speed; // 1000 * m/s,
   FIT_UINT16 avg_power; // watts,total_power / total_timer_time if non_zero_avg_power otherwise total_power / total_elapsed_time
   FIT_UINT16 max_power; // watts,
   FIT_UINT16 total_ascent; // m,
   FIT_UINT16 total_descent; // m,
   FIT_UINT16 num_lengths; // lengths,# of lengths of swim pool
   FIT_UINT16 normalized_power; // watts,
   FIT_LEFT_RIGHT_BALANCE_100 left_right_balance; // 
   FIT_UINT16 first_length_index; // 
   FIT_UINT16 avg_stroke_distance; // 100 * m,
   FIT_UINT16 num_active_lengths; // lengths,# of active lengths of swim pool
   FIT_UINT16 avg_altitude; // 5 * m + 500,
   FIT_UINT16 max_altitude; // 5 * m + 500,
   FIT_SINT16 avg_grade; // 100 * %,
   FIT_SINT16 avg_pos_grade; // 100 * %,
   FIT_SINT16 avg_neg_grade; // 100 * %,
   FIT_SINT16 max_pos_grade; // 100 * %,
   FIT_SINT16 max_neg_grade; // 100 * %,
   FIT_SINT16 avg_pos_vertical_speed; // 1000 * m/s,
   FIT_SINT16 avg_neg_vertical_speed; // 1000 * m/s,
   FIT_SINT16 max_pos_vertical_speed; // 1000 * m/s,
   FIT_SINT16 max_neg_vertical_speed; // 1000 * m/s,
   FIT_UINT16 repetition_num; // 
   FIT_UINT16 min_altitude; // 5 * m + 500,
   FIT_MESSAGE_INDEX wkt_step_index; // 
   FIT_EVENT event; // 
   FIT_EVENT_TYPE event_type; // 
   FIT_UINT8 avg_heart_rate; // bpm,
   FIT_UINT8 max_heart_rate; // bpm,
   FIT_UINT8 avg_cadence; // rpm,total_cycles / total_timer_time if non_zero_avg_cadence otherwise total_cycles / total_elapsed_time
   FIT_UINT8 max_cadence; // rpm,
   FIT_INTENSITY intensity; // 
   FIT_LAP_TRIGGER lap_trigger; // 
   FIT_SPORT sport; // 
   FIT_UINT8 event_group; // 
   FIT_SWIM_STROKE swim_stroke; // 
   FIT_SUB_SPORT sub_sport; // 
   FIT_UINT8 gps_accuracy; // m,
   FIT_SINT8 avg_temperature; // C,
   FIT_SINT8 max_temperature; // C,
   FIT_UINT8 min_heart_rate; // bpm,
} FIT_LAP_MESG;

typedef struct
{
   FIT_DATE_TIME timestamp; // s,
   FIT_SINT32 position_lat; // semicircles,
   FIT_SINT32 position_long; // semicircles,
   FIT_UINT32 distance; // 100 * m,
   FIT_SINT32 time_from_course; // 1000 * s,
   FIT_UINT32 total_cycles; // cycles,
   FIT_UINT32 accumulated_power; // watts,
   FIT_UINT16 altitude; // 5 * m + 500,
   FIT_UINT16 speed; // 1000 * m/s,
   FIT_UINT16 power; // watts,
   FIT_SINT16 grade; // 100 * %,
   FIT_UINT16 compressed_accumulated_power; // 
   FIT_SINT16 vertical_speed; // 1000 * m/s,
   FIT_UINT16 calories; // kcal,
   FIT_UINT16 cadence256; // 256 * rpm,Log cadence and fractional cadence for backwards compatability
   FIT_UINT8 heart_rate; // bpm,
   FIT_UINT8 cadence; // rpm,
   FIT_BYTE compressed_speed_distance[FIT_RECORD_MESG_COMPRESSED_SPEED_DISTANCE_COUNT]; // 
   FIT_UINT8 resistance; // Relative. 0 is none  254 is Max.
   FIT_UINT8 cycle_length; // 100 * m,
   FIT_SINT8 temperature; // C,
   FIT_UINT8 speed_1s[FIT_RECORD_MESG_SPEED_1S_COUNT]; // 16 * m/s,Speed at 1s intervals.  Timestamp field indicates time of last array element.
   FIT_UINT8 cycles; // 
   FIT_LEFT_RIGHT_BALANCE left_right_balance; // 
   FIT_UINT8 gps_accuracy; // m,
   FIT_UINT8 left_torque_effectiveness; // 2 * percent,
   FIT_UINT8 right_torque_effectiveness; // 2 * percent,
   FIT_UINT8 left_pedal_smoothness; // 2 * percent,
   FIT_UINT8 right_pedal_smoothness; // 2 * percent,
   FIT_UINT8 combined_pedal_smoothness; // 2 * percent,
} FIT_RECORD_MESG;

typedef struct
{
   FIT_DATE_TIME timestamp; // s,
   FIT_UINT32 data; // 
   FIT_UINT16 data16; // 
   FIT_EVENT event; // 
   FIT_EVENT_TYPE event_type; // 
   FIT_UINT8 event_group; // 
} FIT_EVENT_MESG;

typedef struct
{
   FIT_DATE_TIME timestamp; // s,
   FIT_UINT32Z serial_number; // 
   FIT_UINT32 cum_operating_time; // s,Reset by new battery or charge.
   FIT_MANUFACTURER manufacturer; // 
   FIT_UINT16 product; // 
   FIT_UINT16 software_version; // 
   FIT_UINT16 battery_voltage; // 256 * V,
   FIT_DEVICE_INDEX device_index; // 
   FIT_DEVICE_TYPE device_type; // 
   FIT_UINT8 hardware_version; // 
   FIT_BATTERY_STATUS battery_status; // 
} FIT_DEVICE_INFO_MESG;