src/fit/FitSDK.vapi


		[CCode (cname = "FIT_LAP_MESG")]
		public struct Lap {
			uint32 timestamp; // s,Lap end time. // was FIT_DATE_TIME
			uint32 start_time; //  // was FIT_DATE_TIME
			int32 start_position_lat; // semicircles,
			int32 start_position_long; // semicircles,
			int32 end_position_lat; // semicircles,
			int32 end_position_long; // semicircles,
			uint32 total_elapsed_time; // 1000 * s,Time (includes pauses)
			uint32 total_timer_time; // 1000 * s,Timer Time (excludes pauses)
			uint32 total_distance; // 100 * m,
			uint32 total_cycles; // cycles,
			uint32 total_work; // J,
			uint32 total_moving_time; // 1000 * s,
			uint32 time_in_hr_zone[]; // 1000 * s,
			uint32 time_in_speed_zone[]; // 1000 * s,
			uint32 time_in_cadence_zone[]; // 1000 * s,
			uint32 time_in_power_zone[]; // 1000 * s,
			uint16 message_index; //  // was FIT_MESSAGE_INDEX
			uint16 total_calories; // kcal,
			uint16 total_fat_calories; // kcal,If New Leaf
			uint16 avg_speed; // 1000 * m/s,
			uint16 max_speed; // 1000 * m/s,
			uint16 avg_power; // watts,total_power / total_timer_time if non_zero_avg_power otherwise total_power / total_elapsed_time
			uint16 max_power; // watts,
			uint16 total_ascent; // m,
			uint16 total_descent; // m,
			uint16 num_lengths; // lengths,# of lengths of swim pool
			uint16 normalized_power; // watts,
			uint16 left_right_balance; // // was FIT_LEFT_RIGHT_BALANCE_100// was FIT_LEFT_RIGHT_BALANCE
			uint16 first_length_index; // 
			uint16 avg_stroke_distance; // 100 * m,
			uint16 num_active_lengths; // lengths,# of active lengths of swim pool
			uint16 avg_altitude; // 5 * m + 500,
			uint16 max_altitude; // 5 * m + 500,
			int16 avg_grade; // 100 * %,
			int16 avg_pos_grade; // 100 * %,
			int16 avg_neg_grade; // 100 * %,
			int16 max_pos_grade; // 100 * %,
			int16 max_neg_grade; // 100 * %,
			int16 avg_pos_vertical_speed; // 1000 * m/s,
			int16 avg_neg_vertical_speed; // 1000 * m/s,
			int16 max_pos_vertical_speed; // 1000 * m/s,
			int16 max_neg_vertical_speed; // 1000 * m/s,
			uint16 repetition_num; // 
			uint16 min_altitude; // 5 * m + 500,
			uint16 wkt_step_index; //  // was FIT_MESSAGE_INDEX
			Fit.Event event; // 
			Fit.EventType event_type; // 
			uint8 avg_heart_rate; // bpm,
			uint8 max_heart_rate; // bpm,
			uint8 avg_cadence; // rpm,total_cycles / total_timer_time if non_zero_avg_cadence otherwise total_cycles / total_elapsed_time
			uint8 max_cadence; // rpm,
			Fit.Intensity intensity; // 
			Fit.LapTrigger lap_trigger; // 
			Fit.Sport sport; // 
			uint8 event_group; // 
			Fit.SwimStroke swim_stroke; // 
			Fit.SubSport sub_sport; // 
			uint8 gps_accuracy; // m,
			int8 avg_temperature; // C,
			int8 max_temperature; // C,
			uint8 min_heart_rate; // bpm,
		}

		[CCode (cname = "FIT_RECORD_MESG")]
		public struct Record {
			uint32 timestamp; // s, // was FIT_DATE_TIME
			int32 position_lat; // semicircles,
			int32 position_long; // semicircles,
			uint32 distance; // 100 * m,
			int32 time_from_course; // 1000 * s,
			uint32 total_cycles; // cycles,
			uint32 accumulated_power; // watts,
			uint16 altitude; // 5 * m + 500,
			uint16 speed; // 1000 * m/s,
			uint16 power; // watts,
			int16 grade; // 100 * %,
			uint16 compressed_accumulated_power; // 
			int16 vertical_speed; // 1000 * m/s,
			uint16 calories; // kcal,
			uint16 cadence256; // 256 * rpm,Log cadence and fractional cadence for backwards compatability
			uint8 heart_rate; // bpm,
			uint8 cadence; // rpm,
			int8 compressed_speed_distance[]; // 
			uint8 resistance; // Relative. 0 is none  254 is Max.
			uint8 cycle_length; // 100 * m,
			int8 temperature; // C,
			uint8 speed_1s[]; // 16 * m/s,Speed at 1s intervals.  Timestamp field indicates time of last array element.
			uint8 cycles; // 
			uint8 left_right_balance; // // was FIT_LEFT_RIGHT_BALANCE
			uint8 gps_accuracy; // m,
			uint8 left_torque_effectiveness; // 2 * percent,
			uint8 right_torque_effectiveness; // 2 * percent,
			uint8 left_pedal_smoothness; // 2 * percent,
			uint8 right_pedal_smoothness; // 2 * percent,
			uint8 combined_pedal_smoothness; // 2 * percent,
		}

		[CCode (cname = "FIT_EVENT_MESG")]
		public struct Event {
			uint32 timestamp; // s, // was FIT_DATE_TIME
			uint32 data; // 
			uint16 data16; // 
			Fit.Event event; // 
			Fit.EventType event_type; // 
			uint8 event_group; // 
		}

		[CCode (cname = "FIT_DEVICE_INFO_MESG")]
		public struct DeviceInfo {
			uint32 timestamp; // s, // was FIT_DATE_TIME
			uint32 serial_number; // 
			uint32 cum_operating_time; // s,Reset by new battery or charge.
			Fit.Manufacturer manufacturer; // 
			uint16 product; // 
			uint16 software_version; // 
			uint16 battery_voltage; // 256 * V,
			uint8 device_index; // // was FIT_DEVICE_INDEX
			Fit.DeviceType device_type; // 
			uint8 hardware_version; // 
			Fit.BatteryStatus battery_status; // 
		}
	}
}